<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="800dp"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@color/icon"/>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/ic_bg3"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout4">

        <com.balysv.materialripple.MaterialRippleLayout
            app:mrl_rippleColor="@color/grey"
            app:mrl_rippleRoundedCorners="6dp"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleAlpha="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:text="@string/music_list_btn"
                android:textColor="@color/primaryText"
                android:id="@+id/music_list_btn"
                android:textSize="20sp" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            app:mrl_rippleColor="@color/grey"
            app:mrl_rippleRoundedCorners="6dp"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleAlpha="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:text="@string/about"
                android:textColor="@color/primaryText"
                android:id="@+id/music_about_btn"
                android:textSize="20sp" />
        </com.balysv.materialripple.MaterialRippleLayout>
        <com.balysv.materialripple.MaterialRippleLayout
            app:mrl_rippleColor="@color/grey"
            app:mrl_rippleRoundedCorners="6dp"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleAlpha="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:text="@string/refresh"
                android:textColor="@color/primaryText"
                android:id="@+id/music_refresh_btn"
                android:textSize="20sp" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>